@@ -197,6 +197,9 @@ Version 8.34 19-November-2013
     2. Add an option (-DINSTALL_MSVC_PDB) to enable installation of .pdb files.
        This allows higher-level build scripts which want .pdb files to avoid
        hard-coding the exact files needed."
+       
+42. Added support for [[:<:]] and [[:>:]] as used in the BSD POSIX library to
+    mean "start of word" and "end of word", respectively, as a transition aid.
 
 
 Version 8.33 28-May-2013
